complete szz